--- a/albums.html
+++ b/albums.html
@@ -90,11 +90,11 @@
             
             <div class="filtr-container row">
               <!-- Album item -->
-              <div class="album-item col-md-4 filtr-item" data-category="1">
-                <a href="nature.html" data-type="page-transition">
+              <div class="album-item col-md-4 filtr-item" data-category="2">
+                <a href="marine-life.html" data-type="page-transition">
                   <div class="album-item__overlay">
                     <span class="album-item__cover"></span>
-                    <h5>nature</h5>
+                    <h5>marine life</h5>
                   </div>
                   <div class="album-item__img" style="background-image: url(assets/images/albums/jellyfish.jpg)"></div>
                 </a>
