--- a/albums.html
+++ b/albums.html
@@ -91,12 +91,12 @@
             <div class="filtr-container row">
               <!-- Album item -->
               <div class="album-item col-md-4 filtr-item" data-category="2">
-                <a href="marine-life.html" data-type="page-transition">
+                <a href="nature.html" data-type="page-transition">
                   <div class="album-item__overlay">
                     <span class="album-item__cover"></span>
-                    <h5>marine life</h5>
+                    <h5>nature</h5>
                   </div>
-                  <div class="album-item__img" style="background-image: url(assets/images/albums/jellyfish.jpg)"></div>
+                  <div class="album-item__img" style="background-image: url(assets/images/albums/monkey.jpg)"></div>
                 </a>
               </div>
               <!-- Album item -->
@@ -120,7 +120,7 @@
                 </a>
               </div>
               <!-- Album item -->
-              <div class="album-item col-md-4 filtr-item" data-category="4">
+              <div class="album-item col-md-4 filtr-item" data-category="2">
                 <a href="tidal.html" data-type="page-transition">
                   <div class="album-item__overlay">
                     <span class="album-item__cover"></span>
